--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
+      //public
+      "@public/*": ["./public/*"],
       //shared code
       "@shared/*": ["./src/shared/*"],
       "@shared": ["./src/shared"],
